[tool.poetry]
name = "certmonger-exporter"
version = "0.1.0"
description = "Prometheus exporter for certmonger"
authors = ["Sam Morris <sam@robots.org.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
